# lsucreator

./: index.html  package-lock.json  package.json
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_init.sql  0003_competencies.sql  0004_add_last_name.sql  0005_appreciations.sql  0006_french_subdomains.sql  0007_maths_subdomains.sql  0008_eps_subdomains.sql  0009_lv_subdomains.sql  0010_qm_subdomains.sql  0011_emc_subdomains.sql  0012_french_ce1ce2_competencies.sql  0013_competency_levels.sql  0014_maths_ce1ce2_competencies.sql  0015_emc_ce1ce2_competencies.sql  0016_other_disciplines_ce1ce2.sql  0017_allow_ne_level.sql
src-tauri/src/: lib.rs  main.rs
src/pages/: BilanPage.tsx  EvaluationPage.tsx  SettingsPage.tsx  StudentsPage.tsx
